# gpuICP

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile.cuda114  Dockerfile.cuda121  LICENSE  README.md
assets/: source.ply  target.ply
benchmark/: CMakeLists.txt  icp_test.cpp  icp_test.cu  icp_test.hip  kdtree.cpp  kdtree_test.cpp  kdtree_test.cu  kdtree_test.hip
src/: icp.cu  icp.hip  icp.hpp  kdtree.cu  kdtree.hip  kdtree.hpp  svd.cpp  svd.hpp  utils.hpp
